--- a/.env
+++ b/.env
@@ -4,16 +4,19 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=yolo_edge
 
-# ESP32-CAM Configuration
-ESP32_STREAM_URL=http://172.20.10.2:81/stream
-
 # Device Configuration
 DEVICE_ID=1
 
 # Model Configuration
 MODEL_PATH=best.pt
 
-# Server Configuration
-FLASK_HOST=0.0.0.0
-FLASK_PORT=5000
-FLASK_DEBUG=False
+# Video Source (Webcam Mode)
+USE_WEBCAM=false
+WEBCAM_INDEX=1
+
+# ESP32-CAM (opsional, tidak dipakai saat USE_WEBCAM=true)
+ESP32_STREAM_URL=http://172.16.2.74:81/stream
+
+# App Settings (opsional)
+SKIP_RATE=5
+MAX_FPS=10
