--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DB_PASSWORD=
 DB_NAME=yolo_edge
 
 # ESP32-CAM Configuration
-ESP32_STREAM_URL=http://172.20.10.2:81/stream
+ESP32_STREAM_URL=http://172.16.2.74http://172.20.10.2:81/stream
 
 # Device Configuration
 DEVICE_ID=1
