Upload UAS SMBD

--- a/.env
+++ b/.env
@@ -15,8 +15,12 @@ USE_WEBCAM=false
 WEBCAM_INDEX=1
 
 # ESP32-CAM (opsional, tidak dipakai saat USE_WEBCAM=true)
-ESP32_STREAM_URL=http://172.16.2.74:81/stream
+ESP32_STREAM_URL=http://192.168.4.1/stream
 
 # App Settings (opsional)
 SKIP_RATE=5
 MAX_FPS=10
+
+# Flask Security
+SECRET_KEY=change-this-in-production
+SESSION_COOKIE_SECURE=false
